--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: onemap
 Title: Software for constructing genetic maps in experimental crosses:
         full-sib, RILs, F2 and backcrosses
-Version: 2.0-3
-Date: December, 2012
+Version: 2.0-4
+Date: March 15, 2014
 Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "gramarga@gmail.com"), person("Marcelo", "Mollinari", role =
         c("aut", "cre"), email = "mmollina@usp.br"), person("Karl",
         "Broman", role = "ctb", email = "kbroman@biostat.wisc.edu"),
-        person("Augusto", "Garcia", role = "ctb", email =
+        person("Augusto", "Garcia", role = c("aut", "ctb"), email =
         "augusto.garcia@usp.br"))
 Depends: tcltk, tkrplot, R (>= 2.12.0)
 Suggests: qtl
@@ -20,7 +20,7 @@ Description: Analysis of molecular marker data from model (backcrosses,
 License: GPL-3
 Packaged: 2012-12-06 19:21:48 UTC; mmollina
 Author: Gabriel Margarido [aut], Marcelo Mollinari [aut, cre], Karl
-        Broman [ctb], Augusto Garcia [ctb]
+        Broman [ctb], Augusto Garcia [aut, ctb]
 Maintainer: Marcelo Mollinari <mmollina@usp.br>
 Repository: CRAN
 Date/Publication: 2012-12-07 07:49:01
