--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: onemap
 Title: Software for constructing genetic maps in experimental crosses:
         full-sib, RILs, F2 and backcrosses
 Version: 2.0-5
-Date: March 17, 2014
+Date: March, 2014
 Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "gramarga@gmail.com"), person("Marcelo", "Mollinari", role =
         c("aut", "cre"), email = "mmollina@usp.br"), person("Karl",
@@ -18,9 +18,10 @@ Description: Analysis of molecular marker data from model (backcrosses,
         phases (genetic map construction). All analysis are based on
         multipoint approaches using hidden Markov models.
 License: GPL-3
-Packaged: 2012-12-06 19:21:48 UTC; mmollina
 Author: Gabriel Margarido [aut], Marcelo Mollinari [aut, cre], Karl
         Broman [ctb], Augusto Garcia [aut, ctb]
 Maintainer: Marcelo Mollinari <mmollina@usp.br>
 Repository: CRAN
-Date/Publication: 2012-12-07 07:49:01
+Packaged: 2013-09-09 16:55:07 UTC; mmollina
+NeedsCompilation: yes
+Date/Publication: 2013-09-09 20:03:53
