--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Depends:
         R (>= 2.12.0)
 Imports:
         ggplot2,
-        reshape2()
+        reshape2
 Suggests: 
         qtl, 
         knitr
