--- a/.travis.yml
+++ b/.travis.yml
@@ -2,4 +2,6 @@ language: r
 sudo: required
 apt_packages:
  - r-cran-tkrplot
-
+ - libcurl4-openssl-dev
+cran:
+ - http://brieger.esalq.usp.br/CRAN/
