--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ sudo: required
 apt_packages:
  - r-cran-tkrplot
  - tk-dev
+ - texinfo
 language: r
 r_build_args: --no-build-vignettes
 r_check_args: --no-vignettes
