--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,6 +15,7 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "Broman", role = "ctb", email = "kbroman@biostat.wisc.edu"),
         person("Augusto", "Garcia", role = c("aut", "ctb"), email =
         "augusto.garcia@usp.br"))
+LinkingTo: Rcpp (>= 0.10.5), Rhtslib, zlibbioc
 Depends: 
         tcltk (>= 3.2.0), 
         tkrplot (>= 0.0-23),
