--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,13 +1,13 @@
 Package: onemap
 Title: Software for constructing genetic maps in experimental crosses:
-        full-sib, RILs, F2 and backcrosses
+    full-sib, RILs, F2 and backcrosses
 Version: 2.0.6
 Description: Analysis of molecular marker data from model (backcrosses,
-        F2 and recombinant inbred lines) and non-model systems (i. e.
-        outcrossing species). For the later, it allows statistical
-        analysis by simultaneously estimating linkage and linkage
-        phases (genetic map construction). All analysis are based on
-        multipoint approaches using hidden Markov models.
+    F2 and recombinant inbred lines) and non-model systems (i. e.
+    outcrossing species). For the later, it allows statistical
+    analysis by simultaneously estimating linkage and linkage
+    phases (genetic map construction). All analysis are based on
+    multipoint approaches using hidden Markov models.
 Date: May, 2015
 Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "gramarga@gmail.com"), person("Marcelo", "Mollinari", role =
@@ -16,16 +16,16 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         person("Augusto", "Garcia", role = c("aut", "ctb"), email =
         "augusto.garcia@usp.br"))
 LinkingTo: Rcpp (>= 0.10.5), Rhtslib, zlibbioc
-Depends: 
-        tcltk (>= 3.2.0), 
-        tkrplot (>= 0.0-23),
-        ggplot2 (>= 1.0.1),
-        R (>= 3.2.0)
+Depends:
+    tcltk (>= 3.2.0),
+    tkrplot (>= 0.0-23),
+    ggplot2 (>= 1.0.1),
+    R (>= 3.2.0)
 Imports:
-        reshape2 (>= 1.4.1)
-Suggests: 
-        qtl (>= 1.36-6), 
-        knitr (>= 1.10)
+    reshape2 (>= 1.4.1)
+Suggests:
+    qtl (>= 1.36-6),
+    knitr (>= 1.10)
 VignetteBuilder: knitr
 Encoding: UTF-8
 License: GPL-3
@@ -36,3 +36,4 @@ Repository: CRAN
 Packaged: 2013-09-09 16:55:07 UTC; mmollina
 NeedsCompilation: yes
 Date/Publication: 2013-09-09 20:03:53
+RoxygenNote: 5.0.0
