--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,8 @@ useDynLib(onemap)
 
 ## Import all packages listed as Imports or Depends
 import(tcltk, tkrplot)
+importFrom(fields, image.plot)
+importFrom(fields, tim.colors)
 
 ## Export all names
 exportPattern(".")
