--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,22 +9,14 @@ importFrom(fields, splint)
 exportPattern(".")
 
 # S3 methods
-S3method(plot, bc.onemap)
-S3method(plot, f2.onemap)
+S3method(plot, onemap)
 S3method(plot, onemap.segreg.test)
-S3method(plot, outcross)
-S3method(plot, riself.onemap)
-S3method(plot, risib.onemap)
-S3method(print, bc.onemap)
 S3method(print, compare)
-S3method(print, f2.onemap)
 S3method(print, group)
+S3method(print, onemap)
 S3method(print, onemap.bin)
 S3method(print, onemap.segreg.test)
 S3method(print, order)
-S3method(print, outcross)
 S3method(print, rf.2pts)
-S3method(print, riself.onemap)
-S3method(print, risib.onemap)
 S3method(print, sequence)
 S3method(print, try)
