--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,12 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "augusto.garcia@usp.br"))
 Author: Gabriel Margarido [aut]
 LinkingTo: Rcpp (>= 0.10.5), Rhtslib, zlibbioc
+Depends:
+     R (>= 3.2.0)
 Imports:
     tcltk (>= 3.2.0),
     tkrplot (>= 0.0-23),
     ggplot2 (>= 2.2.1),
-    R (>= 3.2.0)
     fields (>= 8.3-5),
     reshape2 (>= 1.4.1)
 Suggests:
