--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,7 +25,9 @@ Imports:
     ggplot2 (>= 2.2.1),
     fields (>= 8.3-5),
     reshape2 (>= 1.4.1),
-    spam (>= 1.4-0)
+    spam (>= 1.4-0),
+    maps (>= 3.1.1),
+    stringr (>= 1.2.0)
 Suggests:
     qtl (>= 1.36-6),
     knitr (>= 1.10)
