--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,9 @@
 language: r
+cache: packages
+
 r:
   - release
-r: bioc-release
-cache: packages
+  - bioc-release
 
 addons:
   apt:
@@ -17,3 +18,7 @@ notifications:
   email:
     on_success: change
     on_failure: change
+    
+before_install:
+    - export DISPLAY=:99.0
+    - sh -e /etc/init.d/xvfb start
