Adding new functions group_seq and print.group_seq

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ S3method(plot, onemap)
 S3method(plot, onemap_segreg_test)
 S3method(print, compare)
 S3method(print, group)
+S3method(print, group_seq)
 S3method(print, onemap)
 S3method(print, onemap_bin)
 S3method(print, onemap_segreg_test)
