--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: onemap
 Title: Software for constructing genetic maps in experimental crosses:
     full-sib, RILs, F2 and backcrosses
-Version: 2.0.8
+Version: 2.1.0000
 Description: Analysis of molecular marker data from model (backcrosses,
     F2 and recombinant inbred lines) and non-model systems (i. e.
     outcrossing species). For the later, it allows statistical
@@ -14,6 +14,7 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         c("aut", "cre"), email = "mmollina@usp.br"), person("Karl",
         "Broman", role = "ctb", email = "kbroman@biostat.wisc.edu"),
         person("Rodrigo", "Amadeu", role = "ctb", email = "rodrigo.amadeu@usp.br"),
+        person("Cristiane", "Taniguti", role="ctb", email="chtaniguti@usp.br"),
         person("Augusto", "Garcia", role = c("aut", "ctb"), email =
         "augusto.garcia@usp.br"))
 Author: Gabriel Margarido [aut]
@@ -39,5 +40,5 @@ Repository: CRAN
 Packaged: 2013-09-09 16:55:07 UTC; mmollina
 NeedsCompilation: yes
 Date/Publication: 2013-09-09 20:03:53
-RoxygenNote: 5.0.1
+RoxygenNote: 6.0.1
 biocViews:
