--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,8 +29,10 @@ Imports:
     reshape2 (>= 1.4.1)
 Suggests:
     qtl (>= 1.36-6),
-    knitr (>= 1.10)
-VignetteBuilder: knitr
+    knitr (>= 1.10),
+    rmarkdown,
+    prettydoc
+VignetteBuilder: knitr,rmarkdown, prettydoc
 Encoding: UTF-8
 License: GPL-3
 URL: https://github.com/augusto-garcia/onemap
