--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,7 +24,7 @@ LinkingTo: Rcpp (>= 0.10.5), Rhtslib (>= 1.8.0), zlibbioc (>= 1.22.0)
 Depends: R (>= 3.4.0)
 Imports: tcltk (>= 3.2.0), tkrplot (>= 0.0-23), ggplot2 (>= 2.2.1),
         fields (>= 8.3-5), reshape2 (>= 1.4.1), Rcpp (>= 0.10.5),
-        graphics, methods, stats, utils, maps
+        graphics, methods, stats, utils, vcfR (== 1.6.0)
 Suggests: qtl (>= 1.36-6), knitr (>= 1.10), rmarkdown
 VignetteBuilder: knitr
 Encoding: UTF-8
