--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ importFrom(stats, as.dist, chisq.test, cor.test, dist,
              na.omit, qchisq)
 importFrom(utils, flush.console, head, setTxtProgressBar,
              tail, txtProgressBar)
-
+importFrom(plotly, ggplotly)
 
 ## Export all names
 exportPattern(".")
