--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,7 +29,7 @@ Imports: tcltk (>= 3.2.0),
         fields (>= 8.3-5), 
         reshape2 (>= 1.4.1), 
         Rcpp (>= 0.10.5),
-        vcfR (== 1.6.0),
+        vcfR (>= 1.6.0),
         graphics, 
         methods, 
         stats, 
