--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -46,3 +46,4 @@ Packaged: 2017-10-18 22:25:43 UTC; cris
 NeedsCompilation: yes
 Date/Publication: 2017-10-18 22:48:07 UTC
 RoxygenNote: 6.0.1
+biocViews:
