--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,12 +28,15 @@ Imports: tcltk (>= 3.2.0),
         fields (>= 8.3-5), 
         reshape2 (>= 1.4.1), 
         Rcpp (>= 0.10.5),
-        vcfR (>= 1.6.0),
         graphics, 
         methods, 
         stats, 
         utils
-Suggests: qtl (>= 1.36-6), knitr (>= 1.10), rmarkdown, htmlwidgets
+Suggests: qtl (>= 1.36-6), 
+          knitr (>= 1.10), 
+          rmarkdown, 
+          htmlwidgets,
+          vcfR (>= 1.6.0),
 VignetteBuilder: knitr
 Encoding: UTF-8
 License: GPL-3
