adding write_onemap_raw function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(try_seq)
 export(ug)
 export(vcf2raw)
 export(write_map)
+export(write_onemap_raw)
 import(Rcpp)
 import(ggplot2)
 importFrom(graphics,abline)
