adding draw_map2 removing 'inst/doc/' files building vignettes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(combine_onemap)
 export(compare)
 export(create_data_bins)
 export(draw_map)
+export(draw_map2)
 export(drop_marker)
 export(find_bins)
 export(group)
@@ -49,6 +50,13 @@ export(write_map)
 export(write_onemap_raw)
 import(Rcpp)
 import(ggplot2)
+importFrom(grDevices,bmp)
+importFrom(grDevices,dev.off)
+importFrom(grDevices,jpeg)
+importFrom(grDevices,pdf)
+importFrom(grDevices,png)
+importFrom(grDevices,postscript)
+importFrom(grDevices,tiff)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
 importFrom(graphics,layout)
@@ -56,6 +64,7 @@ importFrom(graphics,lines)
 importFrom(graphics,par)
 importFrom(graphics,plot)
 importFrom(graphics,points)
+importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(methods,is)
