--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ export(kosambi)
 export(make_seq)
 export(map)
 export(marker_type)
+export(mds_onemap)
 export(onemap_read_vcfR)
 export(order_seq)
 export(plot_by_segreg_type)
