--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,6 +49,7 @@ export(ug)
 export(vcf2raw)
 export(write_map)
 export(write_onemap_raw)
+import(MDSMap)
 import(Rcpp)
 import(ggplot2)
 importFrom(grDevices,bmp)
