--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,8 @@ Imports: ggplot2 (>= 2.2.1),
         methods, 
         stats, 
         utils,
-        grDevices
+        grDevices,
+        MDSMap
 Suggests: qtl (>= 1.36-6), 
           knitr (>= 1.10), 
           rmarkdown, 
