--- a/NAMESPACE
+++ b/NAMESPACE
@@ -81,4 +81,5 @@ importFrom(utils,head)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
+importFrom(utils,write.table)
 useDynLib(onemap)
