--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(rf_graph_table)
 export(ripple_seq)
 export(select_segreg)
 export(seriation)
+export(set_map_fun)
 export(suggest_lod)
 export(test_segregation)
 export(test_segregation_of_a_marker)
