--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,12 +14,14 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
+export(binom_error)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
+export(extract_depth)
 export(find_bins)
 export(group)
 export(group_seq)
@@ -31,7 +33,9 @@ export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
 export(order_seq)
+export(pedsim2vcf)
 export(plot_by_segreg_type)
+export(plot_error_dist)
 export(rcd)
 export(read_mapmaker)
 export(read_onemap)
@@ -41,16 +45,20 @@ export(rf_graph_table)
 export(ripple_seq)
 export(select_segreg)
 export(seriation)
+export(set_map_fun)
 export(suggest_lod)
 export(test_segregation)
 export(test_segregation_of_a_marker)
 export(try_seq)
 export(ug)
+export(updog_error)
 export(vcf2raw)
 export(write_map)
 export(write_onemap_raw)
 import(MDSMap)
 import(Rcpp)
+import(doParallel)
+import(foreach)
 import(ggplot2)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
