genotypes_errors and genotypes_probs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(binom_error)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
+export(create_probs)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
@@ -78,6 +79,7 @@ importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
 importFrom(methods,is)
+importFrom(reshape2,melt)
 importFrom(stats,chisq.test)
 importFrom(stats,cor.test)
 importFrom(stats,dist)
