--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(order_seq)
 export(pedsim2vcf)
 export(plot_by_segreg_type)
 export(plot_error_dist)
+export(polyRAD_error)
 export(rcd)
 export(read_mapmaker)
 export(read_onemap)
@@ -61,6 +62,8 @@ import(Rcpp)
 import(doParallel)
 import(foreach)
 import(ggplot2)
+import(polyRAD)
+import(updog)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
