--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ notifications:
   email:
     on_success: change
     on_failure: change
+
+services:
+    - xvfb
     
 before_install:
     - export DISPLAY=:99.0
-    - sh -e /etc/init.d/xvfb start
+    
