--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,11 +17,11 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         person("Rodrigo", "Amadeu", role = "ctb", email = "rodrigo.amadeu@usp.br"),
         person("Cristiane", "Taniguti", role=c("ctb", "cre"), email="chtaniguti@usp.br"),
         person("Augusto", "Garcia", role = c("aut", "ctb"), email =
-        "augusto.garcia@usp.br"))
+        "augusto.garcia@usp.br"), person("Getulio", "Ferreira", role="ctb", email="getulio.caifer@usp.br"))
 Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Karl
-        Broman [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb]
+        Broman [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb], Getulio Ferreira [ctb]
 LinkingTo: Rcpp (>= 0.10.5)
-Depends: R (>= 3.4.0)
+Depends: R (>= 3.6.0)
 Imports: ggplot2 (>= 2.2.1), 
         plotly (>= 4.7.1),
         reshape2 (>= 1.4.1), 
