--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,8 @@ Imports: ggplot2 (>= 2.2.1),
         grDevices,
         MDSMap,
 	doParallel,
-	updog
+	updog,
+	polyRAD
 Suggests: qtl (>= 1.36-6), 
           knitr (>= 1.10), 
           rmarkdown, 
