--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
 export(order_seq)
+export(pedsim2raw)
 export(pedsim2vcf)
 export(plot_by_segreg_type)
 export(plot_error_dist)
