--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,12 +14,12 @@ Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "gramarga@usp.br"), person("Marcelo", "Mollinari", role =
         "aut", email = "mmollina@usp.br"), person("Karl",
         "Broman", role = "ctb", email = "kbroman@biostat.wisc.edu"),
+        person("Getulio", "Ferreira", role="ctb", email="getulio.caifer@usp.br"),
         person("Rodrigo", "Amadeu", role = "ctb", email = "rodrigo.amadeu@usp.br"),
         person("Cristiane", "Taniguti", role=c("ctb", "cre"), email="chtaniguti@usp.br"),
-        person("Augusto", "Garcia", role = c("aut", "ctb"), email =
-        "augusto.garcia@usp.br"), person("Getulio", "Ferreira", role="ctb", email="getulio.caifer@usp.br"))
+        person("Augusto", "Garcia", role = c("aut", "ctb"), email ="augusto.garcia@usp.br"))
 Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Karl
-        Broman [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb], Getulio Ferreira [ctb]
+        Broman [ctb], Getulio Ferreira [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb]
 LinkingTo: Rcpp (>= 0.10.5)
 Depends: R (>= 3.6.0)
 Imports: ggplot2 (>= 2.2.1), 
