--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
+export(avoid_unlinked)
 export(binom_error)
 export(combine_onemap)
 export(compare)
@@ -34,6 +35,7 @@ export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
 export(order_seq)
+export(parmap)
 export(pedsim2raw)
 export(pedsim2vcf)
 export(plot_by_segreg_type)
@@ -64,6 +66,7 @@ import(Rcpp)
 import(doParallel)
 import(foreach)
 import(ggplot2)
+import(parallel)
 import(polyRAD)
 import(updog)
 importFrom(grDevices,bmp)
