--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,12 +25,14 @@ export(draw_map2)
 export(drop_marker)
 export(extract_depth)
 export(find_bins)
+export(generate_overlapping_batches)
 export(group)
 export(group_seq)
 export(haldane)
 export(kosambi)
 export(make_seq)
 export(map)
+export(map_overlapping_batches)
 export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
@@ -38,6 +40,7 @@ export(order_seq)
 export(parmap)
 export(pedsim2raw)
 export(pedsim2vcf)
+export(pick_batch_sizes)
 export(plot_by_segreg_type)
 export(plot_error_dist)
 export(polyRAD_error)
@@ -49,6 +52,7 @@ export(rf_2pts)
 export(rf_graph_table)
 export(ripple_seq)
 export(run_pedsim)
+export(seeded_map)
 export(select_segreg)
 export(seriation)
 export(set_map_fun)
