--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,6 +24,7 @@ export(draw_map)
 export(draw_map2)
 export(drop_marker)
 export(extract_depth)
+export(filter_missing)
 export(find_bins)
 export(group)
 export(group_seq)
