--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,6 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
-export(avoid_unlinked)
 export(binom_error)
 export(combine_onemap)
 export(compare)
@@ -31,6 +30,7 @@ export(haldane)
 export(kosambi)
 export(make_seq)
 export(map)
+export(map_avoid_unlinked)
 export(map_overlapping_batches)
 export(marker_type)
 export(mds_onemap)
