--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(binom_error)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
+export(create_depths_profile)
 export(create_probs)
 export(draw_map)
 export(draw_map2)
@@ -72,6 +73,7 @@ import(foreach)
 import(ggplot2)
 import(parallel)
 import(polyRAD)
+import(tidyr)
 import(updog)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
