--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(add_marker)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
+export(draw_geno)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
@@ -52,6 +53,7 @@ export(write_map)
 export(write_onemap_raw)
 import(MDSMap)
 import(Rcpp)
+import(dplyr)
 import(ggplot2)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
