add dependence "tidyr"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -55,6 +55,7 @@ import(MDSMap)
 import(Rcpp)
 import(dplyr)
 import(ggplot2)
+import(tidyr)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
