--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,17 +9,18 @@ Description: Analysis of molecular marker data from model (backcrosses,
     phases (genetic map construction) according to Wu et al. (2002)
     <doi:10.1006/tpbi.2002.1577>. All analysis are based on multipoint 
     approaches using hidden Markov models.
-Date: 2019-08-22
+Date: 2020-02-09
 Authors@R: c(person("Gabriel", "Margarido", role = "aut", email =
         "gramarga@usp.br"), person("Marcelo", "Mollinari", role =
         "aut", email = "mmollina@usp.br"), person("Karl",
         "Broman", role = "ctb", email = "kbroman@biostat.wisc.edu"),
+        person("Getulio", "Ferreira", role="ctb", email="getulio.caifer@usp.br"),
         person("Rodrigo", "Amadeu", role = "ctb", email = "rodrigo.amadeu@usp.br"),
         person("Cristiane", "Taniguti", role=c("ctb", "cre"), email="chtaniguti@usp.br"),
         person("Augusto", "Garcia", role = c("aut", "ctb"), email =
-        "augusto.garcia@usp.br"), person("Getulio", "Ferreira", role="ctb", email="getulio.caifer@usp.br"))
+        "augusto.garcia@usp.br"))
 Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Karl
-        Broman [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb], Getulio Ferreira [ctb]
+        Broman [ctb], Getulio Ferreira [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb]
 LinkingTo: Rcpp (>= 0.10.5)
 Depends: R (>= 3.6.0)
 Imports: ggplot2 (>= 2.2.1), 
