--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,7 +14,7 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
-export(binom_error)
+export(binom_genotype)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
@@ -44,7 +44,7 @@ export(pedsim2vcf)
 export(pick_batch_sizes)
 export(plot_by_segreg_type)
 export(plot_error_dist)
-export(polyRAD_error)
+export(polyRAD_genotype)
 export(rcd)
 export(read_mapmaker)
 export(read_onemap)
@@ -62,7 +62,7 @@ export(test_segregation)
 export(test_segregation_of_a_marker)
 export(try_seq)
 export(ug)
-export(updog_error)
+export(updog_genotype)
 export(vcf2raw)
 export(write_map)
 export(write_onemap_raw)
