--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,6 +57,7 @@ export(seeded_map)
 export(select_segreg)
 export(seriation)
 export(set_map_fun)
+export(split_onemap)
 export(suggest_lod)
 export(test_segregation)
 export(test_segregation_of_a_marker)
