add f2 and backcross

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,7 @@ export(add_marker)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
-export(draw_geno)
+export(draw_haplotypes)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
