--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
 export(order_seq)
+export(parents_haplotypes)
 export(plot_by_segreg_type)
 export(rcd)
 export(read_mapmaker)
