--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(ripple_seq)
 export(run_pedsim)
 export(seeded_map)
 export(select_segreg)
+export(seq_by_type)
 export(seriation)
 export(set_map_fun)
 export(split_onemap)
