up out vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,7 +52,9 @@ export(read_onemap)
 export(record)
 export(rf_2pts)
 export(rf_graph_table)
+export(ripple_ord)
 export(ripple_seq)
+export(ripple_window)
 export(run_pedsim)
 export(seeded_map)
 export(select_segreg)
