--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,9 +52,7 @@ export(read_onemap)
 export(record)
 export(rf_2pts)
 export(rf_graph_table)
-export(ripple_ord)
 export(ripple_seq)
-export(ripple_window)
 export(run_pedsim)
 export(seeded_map)
 export(select_segreg)
@@ -82,6 +80,7 @@ importFrom(grDevices,jpeg)
 importFrom(grDevices,pdf)
 importFrom(grDevices,png)
 importFrom(grDevices,postscript)
+importFrom(grDevices,rainbow)
 importFrom(grDevices,tiff)
 importFrom(graphics,abline)
 importFrom(graphics,axis)
@@ -93,7 +92,9 @@ importFrom(graphics,points)
 importFrom(graphics,segments)
 importFrom(graphics,text)
 importFrom(graphics,title)
+importFrom(htmlwidgets,saveWidget)
 importFrom(methods,is)
+importFrom(plotly,ggplotly)
 importFrom(reshape2,melt)
 importFrom(stats,chisq.test)
 importFrom(stats,cor.test)
@@ -102,6 +103,10 @@ importFrom(stats,na.omit)
 importFrom(stats,qchisq)
 importFrom(stats,rf)
 importFrom(stats,setNames)
+importFrom(stringr,str_pad)
+importFrom(updog,rflexdog)
+importFrom(utils,browseURL)
+importFrom(utils,flush.console)
 importFrom(utils,head)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
