vcf2progeny_haplotypes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(test_segregation)
 export(test_segregation_of_a_marker)
 export(try_seq)
 export(ug)
+export(vcf2progeny_haplotypes)
 export(vcf2raw)
 export(write_map)
 export(write_onemap_raw)
