--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 S3method(plot,onemap)
 S3method(plot,onemap_progeny_haplotypes)
+S3method(plot,onemap_progeny_haplotypes_counts)
 S3method(plot,onemap_segreg_test)
 S3method(print,compare)
 S3method(print,group)
@@ -19,6 +20,7 @@ export(binom_genotype)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
+export(create_data_bins_by_prob)
 export(create_depths_profile)
 export(create_probs)
 export(draw_map)
@@ -27,6 +29,7 @@ export(drop_marker)
 export(extract_depth)
 export(filter_missing)
 export(find_bins)
+export(find_bins_by_probs)
 export(group)
 export(group_seq)
 export(haldane)
@@ -46,6 +49,7 @@ export(pedsim2vcf)
 export(pick_batch_sizes)
 export(plot_by_segreg_type)
 export(progeny_haplotypes)
+export(progeny_haplotypes_counts)
 export(rcd)
 export(read_mapmaker)
 export(read_onemap)
@@ -75,6 +79,7 @@ import(dplyr)
 import(ggplot2)
 import(parallel)
 import(tidyr)
+importFrom(ggpubr,ggarrange)
 importFrom(grDevices,bmp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
