--- a/NAMESPACE
+++ b/NAMESPACE
@@ -54,6 +54,7 @@ export(rcd)
 export(read_mapmaker)
 export(read_onemap)
 export(record)
+export(remove_inds)
 export(rf_2pts)
 export(rf_graph_table)
 export(ripple_seq)
@@ -79,8 +80,10 @@ import(dplyr)
 import(ggplot2)
 import(parallel)
 import(tidyr)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(ggpubr,ggarrange)
 importFrom(grDevices,bmp)
+importFrom(grDevices,colorRamp)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
 importFrom(grDevices,pdf)
