--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ export(select_segreg)
 export(seq_by_type)
 export(seriation)
 export(set_map_fun)
+export(sort_by_pos)
 export(split_onemap)
 export(suggest_lod)
 export(test_segregation)
