--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,8 @@ services:
     
 before_install:
     - export DISPLAY=:99.0
+    - export RGL_USE_NULL=TRUE
+    - tlmgr install index
 
 apt_packages:
     - libssl-dev 
