--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,7 +33,7 @@ Imports: ggplot2 (>= 2.2.1),
         utils,
         grDevices,
         MDSMap,
-        doParallel,
+        parallel,
         updog,
         dplyr,
         tidyr,
