--- a/NAMESPACE
+++ b/NAMESPACE
@@ -83,6 +83,7 @@ importFrom(RColorBrewer,brewer.pal)
 importFrom(ggpubr,ggarrange)
 importFrom(grDevices,bmp)
 importFrom(grDevices,colorRamp)
+importFrom(grDevices,colorRampPalette)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,jpeg)
 importFrom(grDevices,pdf)
