--- a/NAMESPACE
+++ b/NAMESPACE
@@ -27,6 +27,7 @@ export(draw_map2)
 export(drop_marker)
 export(extract_depth)
 export(filter_missing)
+export(filter_prob)
 export(find_bins)
 export(group)
 export(group_seq)
@@ -104,6 +105,7 @@ importFrom(graphics,title)
 importFrom(htmlwidgets,saveWidget)
 importFrom(methods,is)
 importFrom(plotly,ggplotly)
+importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,chisq.test)
 importFrom(stats,cor.test)
