--- a/.travis.yml
+++ b/.travis.yml
@@ -24,3 +24,9 @@ apt_packages:
     - libftgl2 
     - libfreetype6-dev  
     - libxml2-dev
+    
+r_packages:
+ - covr
+ 
+after_success:
+  - Rscript -e 'library(covr); codecov()'
