--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,7 +16,7 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
-export(binom_genotype)
+export(check_data)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
