--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
 export(check_data)
+export(check_twopts)
 export(combine_onemap)
 export(compare)
 export(create_data_bins)
