--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,7 +39,8 @@ Imports: ggplot2 (>= 2.2.1),
         stringr,
         htmlwidgets,
         ggpubr,
-        RColorBrewer
+        RColorBrewer,
+        dendextend
 Suggests: 
     qtl (>= 1.36-6),
     knitr (>= 1.10),
