adding more tests

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ S3method(print,sequence)
 S3method(print,try)
 export(Bonferroni_alpha)
 export(add_marker)
+export(add_redundants)
 export(check_data)
 export(check_twopts)
 export(combine_onemap)
@@ -65,11 +66,13 @@ export(seq_by_type)
 export(seriation)
 export(set_map_fun)
 export(sort_by_pos)
+export(split_2pts)
 export(split_onemap)
 export(suggest_lod)
 export(test_segregation)
 export(test_segregation_of_a_marker)
 export(try_seq)
+export(try_seq_by_seq)
 export(ug)
 export(vcf2raw)
 export(write_map)
