--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: onemap
 Title: Construction of Genetic Maps in Experimental Crosses: Full-Sib,
         RILs, F2 and Backcrosses
-Version: 2.6.0
+Version: 2.6.5
 Description: Analysis of molecular marker data from model (backcrosses,
     F2 and recombinant inbred lines) and non-model systems (i. e.
     outcrossing species). For the later, it allows statistical
@@ -32,7 +32,8 @@ Imports: ggplot2 (>= 2.2.1),
         stats, 
         utils,
         grDevices,
-        MDSMap,
+        smacof,
+        princurve,
         parallel,
         dplyr,
         tidyr,
