--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,9 @@
 
 S3method(plot,group.upgma)
 S3method(plot,onemap)
+S3method(plot,onemap.pcmap)
+S3method(plot,onemap.pcmap3d)
+S3method(plot,onemap.spheremap)
 S3method(plot,onemap_progeny_haplotypes)
 S3method(plot,onemap_progeny_haplotypes_counts)
 S3method(plot,onemap_segreg_test)
@@ -81,7 +84,10 @@ import(MDSMap)
 import(Rcpp)
 import(dplyr)
 import(ggplot2)
+import(graphics)
 import(parallel)
+import(princurve)
+import(smacof)
 import(tidyr)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(dendextend,color_branches)
@@ -110,6 +116,7 @@ importFrom(graphics,title)
 importFrom(htmlwidgets,saveWidget)
 importFrom(methods,is)
 importFrom(plotly,ggplotly)
+importFrom(reshape,cast)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
@@ -120,16 +127,20 @@ importFrom(stats,cutree)
 importFrom(stats,dist)
 importFrom(stats,hclust)
 importFrom(stats,lm)
+importFrom(stats,median)
 importFrom(stats,na.omit)
 importFrom(stats,predict)
 importFrom(stats,qchisq)
 importFrom(stats,quantile)
 importFrom(stats,rect.hclust)
+importFrom(stats,relevel)
 importFrom(stats,rf)
 importFrom(stats,setNames)
 importFrom(utils,browseURL)
 importFrom(utils,flush.console)
 importFrom(utils,head)
+importFrom(utils,read.csv)
+importFrom(utils,read.table)
 importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
