--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,7 +80,6 @@ export(ug)
 export(vcf2raw)
 export(write_map)
 export(write_onemap_raw)
-import(MDSMap)
 import(Rcpp)
 import(dplyr)
 import(ggplot2)
@@ -116,7 +115,7 @@ importFrom(graphics,title)
 importFrom(htmlwidgets,saveWidget)
 importFrom(methods,is)
 importFrom(plotly,ggplotly)
-importFrom(reshape,cast)
+importFrom(reshape2,cast)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
