removing unused variables cpp

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(create_probs)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
+export(empty_onemap_obj)
 export(extract_depth)
 export(filter_missing)
 export(filter_prob)
@@ -63,6 +64,7 @@ export(remove_inds)
 export(rf_2pts)
 export(rf_graph_table)
 export(ripple_seq)
+export(rm_dupli_mks)
 export(seeded_map)
 export(select_segreg)
 export(seq_by_type)
