add codecov in workflow

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -37,6 +37,7 @@ export(extract_depth)
 export(filter_missing)
 export(filter_prob)
 export(find_bins)
+export(get_mat_rf_out)
 export(get_vec_rf_out)
 export(group)
 export(group_seq)
