--- a/NAMESPACE
+++ b/NAMESPACE
@@ -33,6 +33,7 @@ export(draw_map)
 export(draw_map2)
 export(drop_marker)
 export(empty_onemap_obj)
+export(est_hmm_out)
 export(est_map_hmm_out)
 export(extract_depth)
 export(filter_missing)
