--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,7 @@ importFrom(graphics,title)
 importFrom(htmlwidgets,saveWidget)
 importFrom(methods,is)
 importFrom(plotly,ggplotly)
+importFrom(rebus,number_range)
 importFrom(reshape2,dcast)
 importFrom(reshape2,melt)
 importFrom(stats,as.dendrogram)
