--- a/NAMESPACE
+++ b/NAMESPACE
@@ -150,4 +150,7 @@ importFrom(utils,setTxtProgressBar)
 importFrom(utils,tail)
 importFrom(utils,txtProgressBar)
 importFrom(utils,write.table)
+importFrom(vcfR,extract.gt)
+importFrom(vcfR,masplit)
+importFrom(vcfR,read.vcfR)
 useDynLib(onemap)
