--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(empty_onemap_obj)
 export(est_hmm_out)
 export(est_map_hmm_out)
 export(extract_depth)
+export(filter_2pts_gaps)
 export(filter_missing)
 export(filter_prob)
 export(find_bins)
