--- a/NAMESPACE
+++ b/NAMESPACE
@@ -95,6 +95,7 @@ import(parallel)
 import(princurve)
 import(smacof)
 import(tidyr)
+import(vcfR)
 importFrom(RColorBrewer,brewer.pal)
 importFrom(dendextend,color_branches)
 importFrom(ggpubr,ggarrange)
