--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Analysis of molecular marker data from model (backcrosses,
     phases (genetic map construction) according to Wu et al. (2002)
     <doi:10.1006/tpbi.2002.1577>. All analysis are based on multipoint 
     approaches using hidden Markov models.
-Date: 2021-11-05
+Date: 2021-11-06
 Authors@R: c(person("Gabriel", 
                     "Margarido", 
                     role = "aut",
@@ -38,8 +38,9 @@ Authors@R: c(person("Gabriel",
                     "Garcia", 
                     role = c("aut", "ctb"), 
                     email = "augusto.garcia@usp.br"))
-Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Karl
-        Broman [ctb], Getulio Ferreira [ctb], Rodrigo Amadeu [ctb], Cristiane Taniguti [ctb, cre], Augusto Garcia [aut, ctb]
+Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Cristiane Taniguti [ctb, cre], 
+        Getulio Ferreira [ctb], Rodrigo Amadeu [ctb], Karl Broman [ctb], Katharine Preedy [ctb, cph], 
+        Augusto Garcia [aut, ctb]
 LinkingTo: Rcpp (>= 0.10.5)
 Depends: R (>= 3.6.0)
 Imports: ggplot2 (>= 2.2.1), 
