--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -38,8 +38,10 @@ Authors@R: c(person("Gabriel",
                     "Garcia", 
                     role = c("aut", "ctb"), 
                     email = "augusto.garcia@usp.br"))
-Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], Cristiane Taniguti [ctb, cre], 
-        Getulio Ferreira [ctb], Rodrigo Amadeu [ctb], Karl Broman [ctb], Katharine Preedy [ctb, cph], 
+Author: Gabriel Margarido [aut], Marcelo Mollinari [aut], 
+        Cristiane Taniguti [ctb, cre], Getulio Ferreira [ctb], 
+        Rodrigo Amadeu [ctb], Karl Broman [ctb], 
+        Katharine Preedy [ctb, cph] (MDS ordering algorithm), 
         Augusto Garcia [aut, ctb]
 LinkingTo: Rcpp (>= 0.10.5)
 Depends: R (>= 3.6.0)
