--- a/.github/workflows/check-standard.yaml
+++ b/.github/workflows/check-standard.yaml
@@ -4,13 +4,11 @@ on:
   push:
     branches:
       - main
-      - master
-      - gap_filter
+      - cran_submission
   pull_request:
     branches:
       - main
-      - master
-      - gap_filter
+      - cran_submission
 
 name: R-CMD-check
 
