--- a/NAMESPACE
+++ b/NAMESPACE
@@ -43,6 +43,8 @@ export(find_bins)
 export(group)
 export(group_seq)
 export(group_upgma)
+export(haldane)
+export(kosambi)
 export(make_seq)
 export(map)
 export(map_avoid_unlinked)
