--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,7 @@ export(record)
 export(remove_inds)
 export(rf_2pts)
 export(rf_graph_table)
+export(rf_snp_filter_onemap)
 export(ripple_seq)
 export(rm_dupli_mks)
 export(seeded_map)
