--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -68,8 +68,7 @@ Imports: ggplot2 (>= 2.2.1),
         RColorBrewer,
         dendextend,
         rebus,
-        vcfR (>= 1.6.0),
-        stringi
+        vcfR (>= 1.6.0)
 Suggests: 
     knitr (>= 1.10),
     rmarkdown,
