export QTLpoly input #64

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,8 @@ export(draw_map2)
 export(drop_marker)
 export(empty_onemap_obj)
 export(est_map_hmm_out)
+export(export_mappoly_genoprob)
+export(export_viewpoly)
 export(extract_depth)
 export(filter_2pts_gaps)
 export(filter_missing)
@@ -52,6 +54,7 @@ export(map_overlapping_batches)
 export(marker_type)
 export(mds_onemap)
 export(onemap_read_vcfR)
+export(ord_by_geno)
 export(order_seq)
 export(parents_haplotypes)
 export(pick_batch_sizes)
