--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(order_seq)
 export(parents_haplotypes)
 export(pick_batch_sizes)
 export(plot_by_segreg_type)
+export(plot_genome_vs_cm)
 export(progeny_haplotypes)
 export(progeny_haplotypes_counts)
 export(rcd)
@@ -88,6 +89,7 @@ export(write_onemap_raw)
 import(Rcpp)
 import(dplyr)
 import(ggplot2)
+import(ggpubr)
 import(graphics)
 import(parallel)
 import(princurve)
