add summary_maps function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -78,6 +78,7 @@ export(sort_by_pos)
 export(split_2pts)
 export(split_onemap)
 export(suggest_lod)
+export(summary_maps)
 export(test_segregation)
 export(test_segregation_of_a_marker)
 export(try_seq)
