--- a/NAMESPACE
+++ b/NAMESPACE
@@ -32,6 +32,7 @@ export(create_probs)
 export(draw_map)
 export(draw_map2)
 export(drop_marker)
+export(edit_order_onemap)
 export(empty_onemap_obj)
 export(est_map_hmm_out)
 export(export_mappoly_genoprob)
